using Microsoft.AspNetCore.Identity;

namespace DDDSample1.Domain.UserData
{
    public class ApplicationUser : IdentityUser
    {
    }
}
