namespace DDDSample1.Domain.User
{
    public class ResetPasswordDto
    {
        public string Email { get; set; }
    }
}
